Fix big with content left and right overflow by adding width 100% to about__content

--- a/styles/pages/about/about.scss
+++ b/styles/pages/about/about.scss
@@ -9,7 +9,7 @@
 .about__title {
   @extend %title-100;
 
-  margin: auto;
+  margin: 0 auto;
   max-width: 124rem;
   text-align: center;
 }
